--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,46 @@
-body {
-  margin: 100px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root {
+  --primary: #f76e4f;
+  --green: #7ce27c;
+
+  --dark-900: #16151a;
+  --dark-800: #222224;
+  --dark-700: #323234;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: var(--dark-800);
+}
+input:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+.bg-dark-900 {
+  background-color: var(--dark-900);
+}
+.bg-dark-800 {
+  background-color: var(--dark-800);
+}
+.bg-dark-700 {
+  background-color: var(--dark-700);
+}
+.bg-primary {
+  background-color: var(--primary);
+}
+.bg-green {
+  background-color: var(--green);
+}
+
+.text-primary {
+  color: var(--primary);
+}
+.text-green {
+  color: var(--green);
+}
+.text-dark-800 {
+  color: var(--dark-800);
 }
