--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 :root {
   --primary: #f76e4f;
   --green: #7ce27c;
+  --yellow: #ffcc4c;
 
   --dark-900: #16151a;
   --dark-800: #222224;
@@ -34,12 +35,18 @@ input:focus {
 .bg-green {
   background-color: var(--green);
 }
+.bg-yellow {
+  background-color: var(--yellow);
+}
 
 .text-primary {
   color: var(--primary);
 }
 .text-green {
   color: var(--green);
+}
+.text-yellow {
+  color: var(--yellow);
 }
 .text-dark-800 {
   color: var(--dark-800);
